spring-petclinic-vets-service/k8s/petclinic-vet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-petclinic-vets
spec:
  rules:
  - host: $ING_HOST
    http:
      paths:
      - path: /vets-service
        pathType: "Prefix"
        backend:
          service:
            name: vets-service
            port: 
              number: 80
